fixed footer spacing, added imgs in footer and added <a> tags to imgs in html

--- a/Suburb_Growing/Suburb_Growing/main.css
+++ b/Suburb_Growing/Suburb_Growing/main.css
@@ -70,7 +70,6 @@
     font-family: 'Fredericka the Great', cursive;
     min-height: 30vh;
     color: white;
-    align-items: center;
 }
 
 #footer #openModal {
